k8s/oncokb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncokb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oncokb
      version: 'v1'
  template:
    metadata:
      labels:
        app: oncokb
        version: 'v1'
    spec:
      containers:
        - name: oncokb-app
          image: cbioportal/oncokb-public-gateway:0.0.1-2
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health
              port: http
            initialDelaySeconds: 120
