k8s/oncokb-public-local.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncokb-public
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oncokb-public
      version: 'v1'
  strategy:
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oncokb-public
        version: 'v1'
    spec:
      containers:
        - name: oncokb-public
          image: cbioportal/oncokb-public:2.3.4
          readinessProbe:
            httpGet:
              path: /api/v1/info
              port: 9095
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9095
            initialDelaySeconds: 90
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 750m
          ports:
            - name: http
              containerPort: 9095

---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-public
  namespace: default
  labels:
    app: oncokb-public
spec:
  selector:
    app: oncokb-public
  type: ClusterIP
  ports:
    - name: http
      port: 9095
