k8s/oncokb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: oncokb
  namespace: default
  labels:
    app: oncokb
spec:
  selector:
    app: oncokb
  type: ClusterIP
  ports:
    - name: http
      port: 9090
